--- a/style.css
+++ b/style.css
@@ -50,3 +50,48 @@ header nav a {
     text-decoration: none;
     font-weight: bold; 
 }
+header nav a:hover {
+    color: #FFF;
+}
+header nav a.active {
+    color: #FFFFFF; 
+}
+
+h1, h2 {
+    color: rgb(0, 0, 0);
+    font-family: Verdana;
+    line-height: 130%;
+    margin: 0 auto;
+    max-width: 650px; 
+}
+main {
+    padding: 20px;
+    font-family: Verdana;
+    font-size: 18px;
+    line-height: 130%;
+    margin: 0 auto;
+    max-width: 650px;
+}
+main h1 {
+    margin-top: 20px; 
+}
+p {
+    margin: 0; 
+    margin-bottom: 12px;
+}
+footer { 
+    background-color: rgb(98, 201, 198);
+    padding: 20px;
+    color: #000;
+    font-family:Verdaba;
+    font-size: 12px;
+}
+
+footer p {
+    margin: 5px;
+    text-align: center;
+}
+.my-form {
+    width: 100%;
+     
+}
